kubernetes-bdp/kubernetes-bdp/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-redis
  labels:
    app: bdp-private-redis
spec:
  selector:
    app: redis
  clusterIP: None
  ports:
    - name: redis-port
      port: 6382
      targetPort: 6382

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis-master
  namespace: default
spec:
  serviceName: bdp-private-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-master
        imagePullPolicy: Always
        image: 10.16.0.144:5000/bdp-redis/bdp-redis-bdp-private-v1.0:20190507105249
        volumeMounts:
        - name: redis-master-datadir
          mountPath: /data/
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
  volumeClaimTemplates:
  - metadata:
      name: redis-master-datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: stateful-redis-master-storage-class
      resources:
        requests:
          storage: 500Gi

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis-slave
  namespace: default
spec:
  serviceName: bdp-private-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-slave
        imagePullPolicy: Always
        image: 10.16.0.144:5000/bdp-redis/bdp-redis-bdp-private-slave-v1.0:20190509171700
        volumeMounts:
        - name: redis-slave-datadir
          mountPath: /data/
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
  volumeClaimTemplates:
  - metadata:
      name: redis-slave-datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: stateful-redis-slave-storage-class
      resources:
        requests:
          storage: 500Gi
