kubernetes-bdp/kubernetes-bdp/idata-dbus.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idata-dbus
  labels:
    app: idata-dbus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idata-dbus
  template:
    metadata:
      labels:
        app: idata-dbus
    spec:
      containers:
      - name: idata-dbus
        image: 10.16.0.144:5000/idata-dbus/idata-dbus-release-middle-platform:20190524145554
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-idata-dbus-service
  labels:
    app: bdp-private-idata-dbus
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30091
  selector:
    app: idata-dbus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idata-dbus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: idata-dbus.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-idata-dbus-service
          servicePort: 8080
