kubernetes-bdp/kubernetes-bdp/idata-dts.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idata-dts
  labels:
    app: idata-dts
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idata-dts
  template:
    metadata:
      labels:
        app: idata-dts
    spec:
      containers:
      - name: idata-dts
        image: 10.16.0.144:5000/idata-dts/idata-dts-middle-platform-dev:20190527180955
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-idata-dts-service
  labels:
    app: bdp-private-idata-dts
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30089
  selector:
    app: idata-dts
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idata-dts-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: idata-dts.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-idata-dts-service
          servicePort: 8080
