kubernetes-bdp/kubernetes-bdp/idata-dw.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idata-dw
  labels:
    app: idata-dw
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idata-dw
  template:
    metadata:
      labels:
        app: idata-dw
    spec:
      containers:
      - name: idata-dw
        image: 10.16.0.144:5000/idata-dw/idata-dw-middle-platform-dev:20190527150134
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-idata-dw-service
  labels:
    app: bdp-private-idata-dw
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30884
  selector:
    app: idata-dw
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idata-dw-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: idata-dw.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-idata-dw-service
          servicePort: 8080
